[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "Sara", email = "sara.sorensen@bouvet.no"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["cognite-toolkit (==0.3.29)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
